# make-money

./: .env.example  .gitignore  README.md  pyproject.toml
.hermes/plans/: 2026-04-17_134031-okx-hummingbot-ai-agent-mvp.md
docs/: architecture.md  okx-hummingbot-setup.md  okx-native-sdk.md
prompts/: market_analyst.md  risk_manager.md
src/agent_trader/: __init__.py  account_sync.py  admin_api.py  alerting.py  alt_screener.py  audit_log.py  backtest.py  candle_stream.py  cli.py  config.py  control_state.py  demo_smoke.py  execution_service.py  freqtrade_adapter.py  freqtrade_reconciler.py  funding.py  grid_search.py  (+25 more)
tests/: test_account_sync.py  test_admin_api.py  test_alerting.py  test_alerting_levels.py  test_alt_screener.py  test_audit_log.py  test_backtest.py  test_candle_stream.py  test_cli.py  test_control_state.py  test_demo_smoke.py  test_execution_service.py  test_freqtrade_adapter.py  test_freqtrade_reconciler.py  test_funding.py  test_grid_search.py  test_hbot_client.py  test_healthcheck.py  test_main.py  test_main_alerting.py  test_main_audit.py  test_main_audit_stages.py  test_main_demo_workflow.py  test_main_freqtrade_reconcile.py  test_main_multi_symbol.py  test_main_okx_native.py  test_main_reconcile_job.py  test_main_ui.py  test_market_data.py  test_okx_account_sync.py  test_okx_account_sync_margin.py  test_okx_account_sync_multi_symbol.py  test_okx_account_sync_positions_detail.py  test_okx_client.py  test_okx_execution_service.py  test_okx_order_service.py  test_okx_ws.py  test_okx_ws_candles.py  test_okx_ws_manager.py  test_okx_ws_runtime.py  (+24 more)
